--- a/index.html
+++ b/index.html
@@ -1,1 +1,316 @@
+<!doctype html>
+<html lang="en">
+<head>
 
+<!-- META -->
+<meta charset="utf-8">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+<meta name="description" content="Wenbin Zhang Personal Profile">
+<meta name="keywords" content="Wenbin Zhang">
+<meta name="author" content="Wenbin Zhang">
+
+document.body.addEventListener("touchstart", function() {});
+
+
+<!-- FAVICON -->
+<!--<link rel="shortcut icon" href="assets/img/favicon.png">-->
+
+<!-- FONTS -->
+<!--<link href="https://fonts.googleapis.com/css?family=Abril+Fatface%7CArapey&amp;subset=latin-ext" rel="stylesheet">-->
+        <!-- fonts -->
+<link href="https://fonts.googleapis.com/css?family=Quicksand|Work+Sans:400,700,800&display=swap" rel="stylesheet">
+
+<!-- STYLESHEETS -->
+<!--<link rel="stylesheet" type="text/css" href="assets/css/plugins.css">-->
+<!--<link rel="stylesheet" type="text/css" href="assets/css/main.css">-->
+<!--<link rel="stylesheet" type="text/css" href="assets/css/style.css">-->
+ <!-- Bootstrap CSS -->
+<link href="css/main.css" rel="stylesheet" >
+<link href="css/animate.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+
+
+    <!-- <\!-- this might need to go away -\-> -->
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
+
+<link rel="icon" type="image/png" href="./images/favicon.png" />
+
+<script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+
+    <script>
+      window.addEventListener("pageshow", function() {
+        scrollBy(0, -1000) });
+    </script>
+</head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146879426-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){window.dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146879426-1');
+</script>	
+	
+
+<!-- PAGE TITLE -->
+<title>Wenbin Zhang | Michigan Technological University</title>
+<!-- float:left -->
+
+<body ontouchstart="">
+<div class="demo_panel_box">
+  <div class="color_panel_box">
+	 <div class="spiner_button slide_in_out"><i class="fa fa-futbol-o fa-spin"></i></div>
+	  <span class="red_color"></span>
+	  <span class="blue_color"></span>
+	  <span class="yellow_color"></span>
+	  <span class="purple_color"></span>
+	  <span class="pink_color"></span>
+	  <span class="green_color"></span>
+  </div>
+</div>
+<div id="particles-js"></div>
+<nav class="navbar navbar-expand-lg fixed-top">
+    <button id='btn1' class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon">
+         <i class="fa fa-bars"></i>
+       </span>
+    </button>
+    <div class="namegif">
+        <img src="images/name.gif" style="width:250px; height:40px; position:absolute; top:13px; left:130px">
+    </div>
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav mr-4">
+           <li class="nav-item">
+             <a class="nav-link " data-value="about" href="https://pages.mtu.edu/~wenbinzh/" target="_self">Home</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" data-value="papers" href="research.html" target="_self">Research</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link " data-value="teaching" href="teaching.html" target="_self">Teaching</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link " data-value="talks" href="people.html" target="_self">People</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link " data-value="service" href="service.html" target="_self">Service & Outreach</a>
+           </li>
+         </ul>
+       </div>
+  </nav>
+  <br>
+<!-- PRELOADER -->
+<<div class="about">
+    <div class="row">
+
+      <div class="col-md-4">
+        <div class="container description" style="text-align: center">
+		<br>
+<!--              <img src="images/author.jpg" class="rounded-circle"><br><br><br>-->
+              <div class="photo">
+                  <img class="theme-color" style="margin-top: 15%;" src="images/author.jpg">
+              </div>
+              <div style="text-align: center">
+              <h1>Wenbin Zhang</h1>
+                <p> Assistant Professor</p>
+<!--                     College of Computing<br> -->
+                    <p>Michigan Technological University</p><br>
+<!--                 <h6>Email: wenbinzh [at] mtu.edu<br></h6>
+
+		<h6>Office Location: Kanwal and Ann Rekhi Hall 0310</h6> -->
+              </div>
+        </div>
+      </div>
+
+
+      <div class="col-md-8" id="about">
+	<p style="text-align:justify; text-justify:inter-ideograph;">Hello, my name is Wenbin Zhang (Pronouns: he/him/his; pronounced: jahng wen-bee-eehn).
+        I am a <a  class="theme-color" href="https://en.wikipedia.org/wiki/Hakka_people" target="_blank" rel="noopener noreferrer">Hakka</a> born
+        Assistant Professor at <a class="theme-color" href="https://www.mtu.edu" target="_blank" rel="noopener noreferrer">Michigan Technological University</a>,
+        and an Associate Member at the <a class="theme-color" href="https://ai.waikato.ac.nz/" target="_blank" rel="noopener noreferrer">Te Ipu o te Mahara Artificial Intelligence Institute</a>.
+        Prior to my current position, I was a Postdoctoral Researcher at <a class="theme-color" href="https://www.cmu.edu/" target="_blank" rel="noopener noreferrer">Carnegie Mellon University</a>
+        after receiving a Ph.D. degree from the <a class="theme-color" href="https://www.umbc.edu/" target="_blank" rel="noopener noreferrer">University of Maryland, Baltimore County</a>.
+        I also spent time at multiple global research centers and institutions, including <a class="theme-color" href="https://www.l3s.de/de" target="_blank" rel="noopener noreferrer">L3S Research Center</a>,
+        <a class="theme-color" href="https://www.unimib.it/" target="_blank" rel="noopener noreferrer">University of Milano-Bicocca</a>,
+        <a class="theme-color" href="https://www.kaust.edu.sa/en" target="_blank" rel="noopener noreferrer">King Abdullah University of Science and Technology</a>,
+        <a class="theme-color" href="https://dig.telecom-paristech.fr/blog/" target="_blank" rel="noopener noreferrer">Télécom Paris</a>,
+        <a class="theme-color" href="https://www2.gmu.edu/" target="_blank" rel="noopener noreferrer">George Mason University</a>
+        and <a class="theme-color" href="https://www.nlm.nih.gov/" target="_blank" rel="noopener noreferrer">National Institutes of Health</a>.
+        I had four Stendhal syndrome years in <a class="theme-color" href="https://www.google.com/maps/@39.9553424,116.3162938,17z?hl=en&amp;authuser=0" target="_blank" rel="noopener noreferrer">Beijing</a>
+        and <a class="theme-color" href="https://www.google.com/maps/@39.1099492,117.2091143,18z?hl=en&amp;authuser=0" target="_blank" rel="noopener noreferrer">Tianjin</a> before starting my study abroad
+        in <a class="theme-color" href="https://www.google.com/maps/@47.5730776,-52.7360975,16z?hl=en&amp;authuser=0" target="_blank" rel="noopener noreferrer">Newfoundland</a>, where it snowed in June (not anymore due to global warming).<br><br>
+
+        The main focus of my research is on designing machine learning algorithms that have theoretical performance guarantees and social consciousness.
+        I am particularly interested in combining the aspect of gaining machine learning knowledge with an orientation towards making machine learning usable
+        and useful for high-stakes decision-making, such as healthcare, business, climate, policy, and law.
+        To this end, I have been exploring complex real-world data (e.g., EHR, MODIS, supply chain data),
+        under multifarious contexts (e.g., censorship, imbalance, distribution shift),
+        subject to different metrics (e.g., fairness, regime centroids, c-index),
+        through joyful collaboration and team work with computational scientists and domain experts.
+        Incidentally, my <a class="theme-color" href="https://www.oakland.edu/enp/" target="_blank" rel="noopener noreferrer">Erdős</a> number is 3
+        (Me -> Alan Evans -> David Avis -> Erdős) as a result of the enjoyed interdisciplinary collaboration.
+        You can read more about my research <a class="theme-color" href="research.html">here</a>.<br><br>
+
+        Aside from my obvious interest in research, I enjoy watching and playing all kinds of sports especially soccer. I had the experience of my life at
+        <a class="theme-color" href="https://en.wikipedia.org/wiki/Kaliningrad_Stadium" target="_blank" rel="noopener noreferrer">Kaliningrad Stadium</a>
+        cheering the 2018 World Cup. I ran my very first Marathon at <a class="theme-color" href="https://www.shamrockmarathon.com/" target="_blank" rel="noopener noreferrer">Virginia Beach</a>
+        credit to <a class="theme-color" href="https://november-project.com/baltimore-md/" target="_blank" rel="noopener noreferrer">November Project</a>.
+        Finally, I believe Manchester is red as I thought David Beckham was cool when I was young. Him growing up, me supporting United till date.<br><br>
+
+        Last but not least, I appreciate you taking the time to surf the internet this far to check up on and to read a bit of my story.
+        Presuming I am not that boring, I encourage you to say hello before you leave for our interesting conversations to come and please
+        find below my contact information. <br><br></p>
+          
+      </div>
+    </div>
+  </div>
+<!-- /PRELOADER -->
+
+<hr class="featurette-divider wow zoomIn">
+
+<div class="contact wow zoomIn">
+<h1 class="text-center">Contact</h1>
+
+<!-- <div class="div-container">
+    <div class="mybox">
+        <div class="box_item1">
+            <p style="text-align:center;"><b>Email: </b></p>
+            <p style="text-align:center;"><b>Phone: </b></p>
+            <p style="text-align:center;"><b>Office: </b></p>
+        </div>
+        <div class="box_item2">
+            <p style="text-align:left;"><a href="mailto:wenbinzh@mtu.edu" style="text-decoration:none" target="_blank">wenbinzh at mtu dot edu</a></p>
+            <p style="text-align:left;">9064871087</p>
+            <p style="text-align:left;">Rekhi Hall 0310</p>
+        </div>
+        <div class="box_item1">
+            <p style="text-align:center;"><b>Mailing<br>Address:</b></p>
+        </div>
+        <div class="box_item2">
+            <p style="text-align:left;">Department of Computer Science<br>
+                Michigan Technological University <br>
+                1400 Townsend Drive <br>
+                Houghton, MI 49931 </p>
+        </div>
+    </div>
+</div> -->
+<div id="contact">
+<div class="div-container">
+    <div class="mybox">
+        <div class="box_item3">
+            <div class="row">
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-2">
+                    <p><b>Email:</b></p>
+                </div>
+                <div class="col-md-4"><p><a class="theme-color" href="mailto:wenbinzh@mtu.edu" style="text-decoration:none" target="_blank">wenbinzh [at] mtu.edu</a></p>
+                </div>
+<!--                <div class="col-md-1">-->
+
+<!--                </div>-->
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-2">
+                    <p><b>Phone:</b></p>
+                </div>
+                <div class="col-md-4"><p>+1 906-487-1087</p>
+                </div>
+<!--                <div class="col-md-1">-->
+
+<!--                </div>-->
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-2">
+                    <p><b>Office:</b></p>
+                </div>
+                <div class="col-md-4"><p>Rekhi Hall 310</p>
+                </div>
+<!--                <div class="col-md-1">-->
+
+<!--                </div>-->
+            </div>
+        </div>
+        <div class="box_item4">
+            <div class="row">
+                <div class="col-md-1">
+
+                </div>
+                <div class="col-md-2">
+                    <p><b>Mailing<br>Address:</b></p>
+                </div>
+                <div class="col-md-6"><p>Department of Computer Science<br>
+                Michigan Technological University <br>
+                1400 Townsend Drive <br>
+                Houghton, MI 49931</p>
+                </div>
+                <div class="col-md-1">
+
+                </div>
+            </div>
+        </div>
+</div>
+</div>
+</div>
+</div>	
+
+
+
+<hr class="featurette-divider wow zoomIn">
+  <footer class="footer mt-auto py-3" >
+    <div class="flex-container">
+      <span class="flex-item text-muted">© 2022 WENBIN ZHANG.</span>
+      <div class="flex-item" style="width:20%"></div>
+      <div class="flex-item"><a class="footer_link" href="#" target="_self">Back to Top</a></div>
+    </div>
+<!--  </div>-->
+  </footer>
+
+<!-- IMAGE CONTAINER -->
+<div class="image-container">
+
+	<div class="background-img"></div>
+	<div class="information-img"></div>
+</div>
+<!-- /IMAGE CONTAINER -->
+
+
+<!-- CONTENT AREA -->
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- JAVASCRIPTS -->
+<script type="text/javascript" src="js/plugins.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/particles.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/publication.js"></script>
+<script type="text/javascript" src="js/wow-1.3.0.min.js"></script>
+<script type="text/javascript" src="js/validator.min.js"></script>
+<script type="text/javascript" src="js/magnific-popup-options.js"></script>
+<script type="text/javascript" src='js/jquery-3.4.1.min.js'></script>
+<script type="text/javascript" src='js/effects.js'></script>
+<script type="text/javascript" src='js/main.js'></script>
+<style>
+.copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
+</style>
+
+</body>
+
+
+</html>
