--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
 
-<!-- META -->
 <meta charset="utf-8">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 <meta name="description" content="Wenbin Zhang Personal Profile">
 <meta name="keywords" content="Wenbin Zhang">
 <meta name="author" content="Wenbin Zhang">
-
-document.body.addEventListener("touchstart", function() {});
-
+<script type="text/javascript">
+	document.body.addEventListener("touchstart", function() {});
+</script>
 
 <link href="https://fonts.googleapis.com/css?family=Quicksand|Work+Sans:400,700,800&display=swap" rel="stylesheet">
 
@@ -24,9 +22,9 @@ document.body.addEventListener("touchstart", function() {});
 <link rel="icon" type="image/png" href="./images/favicon.png" />
 
 <script src="js/wow.min.js"></script>
-    <script>
+<script>
       new WOW().init();
-    </script>
+</script>
 
     <script>
       window.addEventListener("pageshow", function() {
